--- a/DeveloppementD_interfacesWebs/R1.02/TP4/style_tp4.css
+++ b/DeveloppementD_interfacesWebs/R1.02/TP4/style_tp4.css
@@ -1,5 +1,6 @@
 * {
     font-family: Tahoma, Geneva, sans-serif;
+    box-sizing : border-box;
 }
 
 body {
@@ -8,8 +9,15 @@ body {
     background-position: center;
 }
 
+p {
+    hyphens : auto;
+    word-wrap : break-word;
+    overflow-wrap : break-word;
+}
+
+
 #page {
-    width: 900px;
+    max-width: 900px;
     margin: auto;
 }
 
@@ -145,4 +153,54 @@ article aside {
     text-align: center;
     padding: 1em;
     margin-top: 1em;
+}
+
+@media (max-width: 1024px) {
+    body {
+        background-image: none;
+        background-color: #000000;
+    }
+
+    #banniere {
+        background-image: none;
+        background-color: #000000;
+        height: auto;
+        padding: 1em 0;
+    }
+
+    #banniere h1 {
+        font-size: 200%;
+        line-height: normal;
+    }
+}
+
+/* Hide elements */
+@media screen and (max-width: 768px) {
+    .petit_ecran {
+        display: none;
+    }
+}
+
+/* Smartphones */
+@media (max-width: 600px) {
+    article img {
+        float: none !important;
+        display: block;
+        margin: 0.5em auto;
+        max-width: 100%;
+        height: auto;
+    }
+
+    #conteneur {
+        flex-direction: column;
+    }
+
+    section {
+        width: 100%;
+    }
+
+    #auteur {
+        width: 100%;
+        margin-left: 0;
+    }
 }
